--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <title>Vite App</title>
+      <link rel="icon" href="/src/assets/images/momotalk.png" />
+    <title>桃信</title>
   </head>
   <body>
     <div id="app"></div>
